@@ -1,14 +1,13 @@
 Package: rbugs
 Title: Fusing R and OpenBugs
-Date: 2008-11-19
-Version: 0.3-6
-Author: Jun Yan <jyan@stat.uconn.edu> 
- (with part of the code modified from bugs.R,
-  http://www.stat.columbia.edu/~gelman/bugsR/,
-  by Andrew Gelman <gelman@stat.columbia.edu>)
-Description: Functions to prepare files needed for running BUGS 
- in batch-mode, and running BUGS from R. Support for Linux systems
- with OpenBugs is emphasized. 
+Date: 2010-05-01
+Version: 0.4-0
+Author: Jun Yan <jyan@stat.uconn.edu>
+Description: Functions to prepare files needed for running BUGS in
+        batch-mode, and running BUGS from R. Support for Linux systems
+        with OpenBugs is emphasized.
 Maintainer: Jun Yan <jyan@stat.uconn.edu>
 License: GPL (>= 3.0)
-Packaged: Sat Nov 22 19:17:54 2008; jyan
+Packaged: 2010-05-01 20:29:27 UTC; jyan
+Repository: CRAN
+Date/Publication: 2010-05-02 07:04:39
